--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,7 +10,8 @@ description = 'Demo project for Spring Boot'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
+		sourceCompatability = JavaVersion.VERSION_17
+		targetCompatabillity = JavaVersion.VERSION_17
 	}
 }
 
