--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,8 +10,8 @@ description = 'Demo project for Spring Boot'
 
 java {
 	toolchain {
-		sourceCompatability = JavaVersion.VERSION_17
-		targetCompatability = JavaVersion.VERSION_17
+		sourceCompatibility = JavaVersion.VERSION_17
+		targetCompatibility = JavaVersion.VERSION_17
 	}
 }
 
